# cmake-project-template

./: .clang-format  .gitignore  CMakeLists.txt
modules/: CMakeLists.txt
modules/template/: CMakeLists.txt
modules/template/inc/template/: version.h
modules/template/lib/: version.c
modules/template/src/: main.c
modules/template/tests/: version_test.cpp
